#234 Initial support for java.desktop module (#248)
* #234 Initial support for java.desktop module